update docs swagger open api
